# deepseek-cli

./: .gitignore  Pipfile  api.py  main.py  pow_solve.py  pyproject.toml  tools.py
src/deepseek_cli/: colors.py  main.py  tools.py
